# tiny_trainer

./: .gitattributes  AGENTS (1).md  BUILD_AND_PACKAGING.md  Cargo.toml  MIGRATION_COMPLETE.md  PRODUCTION_CONFIG.md  README.md  test_shader.wgsl
.claude/: settings.local.json
config/: engine.toml  wgsl_generation.toml
docs/: APM_SPEC.md  QUICK_REFERENCE.md  agents.md
examples/: basic_usage.rs  generate_all_templates.bat  generate_all_templates.sh  test_dataset.rs  test_engine_config.rs
scripts/: build_release.bat  build_release.sh  package_release.bat
src/: lib.rs  main.rs
src/config/: mod.rs
src/dataset/: mod.rs
src/inference/: mod.rs
src/model/: attention.rs  decoder.rs  encoder.rs  mod.rs
src/tokenizer/: mod.rs
src/training/: mod.rs
src/wgsl/: mod.rs
